# EagleEye

./: .gitignore  LICENSE  OPTIMIZATION_GUIDE.md  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_eagleeye.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  requirements.txt  start.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  scams.py
backend/app/core/: config.py  database.py  init_db.py
backend/app/crud/: __init__.py  scam.py
backend/app/models/: __init__.py  scam.py
backend/app/schemas/: __init__.py  scam.py
eagleeye/: __init__.py  __main__.py  cli.py  cli_helpers.py  config.py  database.py  exceptions.py  logging_config.py  ui.py
eagleeye/analysis/: __init__.py  caller_id.py  content_scraper.py  geolocation.py  link_scanner.py  nlp_pipeline.py  text_analyzer.py  trend_analyzer.py  voice_analyzer.py
eagleeye/crowdsource/: __init__.py  community.py  heatmap.py  reporter.py
eagleeye/ml/: __init__.py  features.py  model_manager.py  models.py  pipeline.py
eagleeye/sources/: __init__.py  base.py  fcc_complaints.py  ftc_dnc.py  openphish.py  pyopdb.py  urlvoid.py
scamswatter/: __init__.py  __main__.py  cli.py  config.py  database.py  ui.py
scamswatter/sources/: __init__.py  base.py  mock.py  phishtank.py  urlvoid.py
