[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scamswatter"
version = "0.1.0"
description = "Real-time scam intelligence CLI tool - Your personal scam radar"
authors = ["ScamSwatter Team <contact@scamswatter.dev>"]
readme = "README.md"
homepage = "https://github.com/scamswatter/scamswatter"
repository = "https://github.com/scamswatter/scamswatter"
documentation = "https://scamswatter.readthedocs.io"
keywords = ["security", "scam", "fraud", "intelligence", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
pyyaml = "^6.0.1"
click = "^8.1.7"
asyncio-mqtt = {version = "^0.16.1", optional = true}
aiofiles = "^23.2.1"

[tool.poetry.extras]
notifications = ["asyncio-mqtt"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
coverage = "^7.3.2"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
scamswatter = "scamswatter.cli:app"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
